# engine_mate_stats

./: .gitignore  Cargo.toml  TODO.md
src/: FENs.json  analyzer.rs  config.rs  engine_processor.rs  engine_result.rs  fens.rs  main.rs  uci_engine.rs
